force/src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Resource_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIT_Script_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for writing all SIT Scripts related to this Request.</description>
        <inlineHelpText>Person responsible for writing all SIT Scripts related to this Request.</inlineHelpText>
        <label>SIT Script Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIT_Status__c</fullName>
        <label>SIT Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Scripts in Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Ready for SIT</fullName>
                </value>
                <value>
                    <fullName>Testing in Progress</fullName>
                </value>
                <value>
                    <fullName>Testing Complete</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIT_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for executing all SIT Scripts related to this Request.</description>
        <inlineHelpText>Person responsible for executing all SIT Scripts related to this Request.</inlineHelpText>
        <label>SIT Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for completing SIT.</description>
        <inlineHelpText>Number of days estimated for completing SIT.</inlineHelpText>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Notes__c</fullName>
        <label>Security Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identify: New Requirement</fullName>
                    <default>true</default>
                    <label>Identify: New Requirement</label>
                </value>
                <value>
                    <fullName>Identify: Change Request</fullName>
                </value>
                <value>
                    <fullName>Identify: Submit for Business Review</fullName>
                </value>
                <value>
                    <fullName>Identify: Deferred</fullName>
                </value>
                <value>
                    <fullName>Consolidate: Approve to Estimate</fullName>
                </value>
                <value>
                    <fullName>Consolidate: Level of Effort Complete</fullName>
                </value>
                <value>
                    <fullName>Approve: Approved to Deploy</fullName>
                </value>
                <value>
                    <fullName>Release: Design</fullName>
                </value>
                <value>
                    <fullName>Release: Build</fullName>
                </value>
                <value>
                    <fullName>Release: Test</fullName>
                </value>
                <value>
                    <fullName>Release: SIT</fullName>
                </value>
                <value>
                    <fullName>Release: UAT</fullName>
                </value>
                <value>
                    <fullName>Release: Build Production</fullName>
                </value>
                <value>
                    <fullName>Release: Test Production</fullName>
                </value>
                <value>
                    <fullName>Close: Deployed</fullName>
                </value>
                <value>
                    <fullName>Close: Rejected</fullName>
                </value>
                <value>
                    <fullName>Close: Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Impacted__c</fullName>
        <inlineHelpText>Systems that get impacted due to this Request.</inlineHelpText>
        <label>Systems Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2020source – Portal</fullName>
                </value>
                <value>
                    <fullName>Active Directory</fullName>
                </value>
                <value>
                    <fullName>Altair Goldmine</fullName>
                </value>
                <value>
                    <fullName>BDS</fullName>
                </value>
                <value>
                    <fullName>BI DW</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Box - Eyewear</fullName>
                </value>
                <value>
                    <fullName>Cactus</fullName>
                </value>
                <value>
                    <fullName>COGNOS</fullName>
                </value>
                <value>
                    <fullName>Credentialing</fullName>
                </value>
                <value>
                    <fullName>Custom Portals – Portal</fullName>
                </value>
                <value>
                    <fullName>Doctor EOP Lab RA</fullName>
                </value>
                <value>
                    <fullName>Dr. Quality/Assurance Management</fullName>
                </value>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>Email Direct</fullName>
                </value>
                <value>
                    <fullName>Experience/Experience +</fullName>
                </value>
                <value>
                    <fullName>Eyefinity – Portal</fullName>
                </value>
                <value>
                    <fullName>eyeForce</fullName>
                </value>
                <value>
                    <fullName>Eyewear NextTech</fullName>
                </value>
                <value>
                    <fullName>International VC Back Office</fullName>
                </value>
                <value>
                    <fullName>International VC Portals – Portal</fullName>
                </value>
                <value>
                    <fullName>Marchon 1 * / MyMarchon</fullName>
                </value>
                <value>
                    <fullName>MDM</fullName>
                </value>
                <value>
                    <fullName>Member Mailings</fullName>
                </value>
                <value>
                    <fullName>MF Claim Payment</fullName>
                </value>
                <value>
                    <fullName>MF Pricing</fullName>
                </value>
                <value>
                    <fullName>Molly and CDL</fullName>
                </value>
                <value>
                    <fullName>OfficeMate AcuityLogic</fullName>
                </value>
                <value>
                    <fullName>Optics BOX</fullName>
                </value>
                <value>
                    <fullName>Optics DVI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Description__c</fullName>
        <label>Technical Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Comments__c</fullName>
        <label>Test Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Total__c</fullName>
        <label>Test Total</label>
        <summarizedField>Application_Inventory__c.Total_Test__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotEst__c</fullName>
        <description>Total estimated value.</description>
        <formula>Non_Contingency_Estimate__c + ( Non_Contingency_Estimate__c * ( 1*Cont__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total estimated to build application.  Does not include VSP resources.</inlineHelpText>
        <label>Total Estimate (Bottom Up)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Level_of_Effort__c</fullName>
        <label>Total Actual Level of Effort</label>
        <summarizedField>Actual_Level_of_Effort__c.Total_Actual_Level_of_Effort__c</summarizedField>
        <summaryForeignKey>Actual_Level_of_Effort__c.Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Effort_Variance__c</fullName>
        <formula>Total_Actual_Level_of_Effort__c - TotEst__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Effort Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimate_Bottom_Up__c</fullName>
        <formula>Build_Total__c + Design_Total__c + Test_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Solution Capacity Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Priority_Ranking__c</fullName>
        <formula>( Business_Benefit_Value__c   +  User_Impact_of_Change_Value__c  +  Level_of_Effort_Value__c  +  Count_on_Business_Drivers__c +  Number_Of_LOBs__c )  / 5</formula>
        <label>Total Priority Ranking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Priority__c</fullName>
        <inlineHelpText>Value is calculated based on the value in the Total Priority Ranking field: 
High = Any value greater than or equal to 2.50 or Legal &amp; Compliance = High 
Medium = Any value between 1.50 and 2.49 
Low = Any value less than 1.50</inlineHelpText>
        <label>Total Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of days.</description>
        <inlineHelpText>Total number of days estimated.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Impact__c</fullName>
        <description>Used to describe potential change management implications and training needs.</description>
        <label>Training Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TrnDep__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Training and Deploying.</description>
        <inlineHelpText>Number of days estimated for Training and Deploying.</inlineHelpText>
        <label>Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT_Script_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for writing all UAT Scripts related to this Request.</description>
        <inlineHelpText>Person responsible for writing all UAT Scripts related to this Request.</inlineHelpText>
        <label>UAT Script Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UAT_Status__c</fullName>
        <label>UAT Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Scripts in Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Ready for UAT</fullName>
                </value>
                <value>
                    <fullName>Testing in Progress</fullName>
                </value>
                <value>
                    <fullName>Testing Complete</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete UAT.</description>
        <inlineHelpText>Number of days estimated to complete UAT.</inlineHelpText>
        <label>UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request_Value__c</fullName>
        <description>Value is calculated by the selection of the Urgency of Request field.</description>
        <formula>CASE( 
Urgency_of_Request__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Urgency of Request field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Urgency of Request Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request__c</fullName>
        <inlineHelpText>Low: Not required within the next 90 days to enable a business process 
Medium: Required within the next 46 – 90 days to enable a business process 
High: Required within the next 30 – 45 days to enable a business process</inlineHelpText>
        <label>Urgency of Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change_Value__c</fullName>
        <description>Value is calculated by the User Impact of Change field.</description>
        <formula>CASE( 
User_Impact_of_Change__c , 
&quot;High&quot;,1, 
&quot;Medium&quot;,2, 
&quot;Low&quot;, 3, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the User Impact of Change field: 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>User Impact of Change Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change__c</fullName>
        <inlineHelpText>Low: Will Significantly Impact Users (high degree of adoption with significant effort) 
Medium: Will Moderately Impact Users (high degree of adoption with moderate effort) 
High: Will Minimally Impact Users (high degree of adoption with minimal effort)</inlineHelpText>
        <label>End User Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Profiles_Affected__c</fullName>
        <label>User Profiles Affected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VSP Company Communities User</fullName>
                </value>
                <value>
                    <fullName>VSP CRM Support User</fullName>
                </value>
                <value>
                    <fullName>VSP Customer Support Management User</fullName>
                </value>
                <value>
                    <fullName>VSP Customer Support User</fullName>
                </value>
                <value>
                    <fullName>VSP GAAT User</fullName>
                </value>
                <value>
                    <fullName>VSP General User</fullName>
                </value>
                <value>
                    <fullName>VSP Integration User - Marketing</fullName>
                </value>
                <value>
                    <fullName>VSP LOB Admin User</fullName>
                </value>
                <value>
                    <fullName>VSP Management User</fullName>
                </value>
                <value>
                    <fullName>VSP Marketing User</fullName>
                </value>
                <value>
                    <fullName>VSP Network Recruitment Management User</fullName>
                </value>
                <value>
                    <fullName>VSP Network Recruitment User</fullName>
                </value>
                <value>
                    <fullName>VSP Sales User</fullName>
                </value>
                <value>
                    <fullName>VSP Sales User Chatter Only</fullName>
                </value>
                <value>
                    <fullName>VSP Support Queue User</fullName>
                </value>
                <value>
                    <fullName>VSP Technical User</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VSP_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Whom on VSP&apos;s Project Team is responsible for validating the request.</inlineHelpText>
        <label>VSP Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visualization_Status__c</fullName>
        <inlineHelpText>Identifies if the Requirement has been visualized. This is used when the Requirement Status is in Release: Design.</inlineHelpText>
        <label>Visualization Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Visualized</fullName>
                    <default>true</default>
                    <label>Not Visualized</label>
                </value>
                <value>
                    <fullName>Visualized - 50%</fullName>
                </value>
                <value>
                    <fullName>Visualized - 100%</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All_Active_Access_Data_Mobile_Reqmts</fullName>
        <columns>NAME</columns>
        <columns>Parent_Request__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>JIRA_Issue__c</columns>
        <columns>JIRA_Number__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>Release__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Access</value>
        </filters>
        <label>All Active Access/ Data / Mobile Reqmts</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Account_Requirements2</fullName>
        <columns>NAME</columns>
        <columns>Parent_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>TotEst__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>Planned_Release__c</field>
            <operation>notContain</operation>
            <value>Release</value>
        </filters>
        <label>All Active Account Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Campaign_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>TotEst__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Parent_Request__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Release__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Campaign</value>
        </filters>
        <filters>
            <field>Planned_Release__c</field>
            <operation>notContain</operation>
            <value>Release</value>
        </filters>
        <label>All Active Campaign Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Case_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Type__c</columns>
        <columns>JIRA_Number__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>TotEst__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Parent_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Case</value>
        </filters>
        <filters>
            <field>Planned_Release__c</field>
            <operation>notContain</operation>
            <value>Release</value>
        </filters>
        <label>All Active Case Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Contact_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Parent_Request__c</columns>
        <columns>Release__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>TotEst__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Contact</value>
        </filters>
        <filters>
            <field>Planned_Release__c</field>
            <operation>notContain</operation>
            <value>Release</value>
        </filters>
        <label>All Active Contact Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Data_Integration_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Parent_Request__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Capability__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>TotEst__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Release__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>includes</operation>
            <value>Integration,Data Migration</value>
        </filters>
        <filters>
            <field>Planned_Release__c</field>
            <operation>notContain</operation>
            <value>Release</value>
        </filters>
        <label>All Active Data/Integration Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Knowledge_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Parent_Request__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Release__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>TotEst__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Knowledge</value>
        </filters>
        <filters>
            <field>Planned_Release__c</field>
            <operation>notContain</operation>
            <value>Release</value>
        </filters>
        <label>All Active Knowledge Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Lead_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Parent_Request__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>TotEst__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Release__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Lead</value>
        </filters>
        <filters>
            <field>Planned_Release__c</field>
            <operation>notContain</operation>
            <value>Release</value>
        </filters>
        <label>All Active Lead Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Opportunity_Requirements1</fullName>
        <columns>NAME</columns>
        <columns>Parent_Request__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>TotEst__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Release__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Planned_Release__c</field>
            <operation>notContain</operation>
            <value>Release</value>
        </filters>
        <label>All Active Opportunity Requirements</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Recruitment_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Parent_Request__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Requesting_LOB__c</columns>
        <columns>TotEst__c</columns>
        <columns>Release_Rank__c</columns>
        <columns>Count_on_Business_Drivers__c</columns>
        <columns>Business_Process_Step__c</columns>
        <columns>Release__c</columns>
        <columns>Planned_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Recruiting</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Release</value>
        </filters>
        <label>All Active Recruitment Requirements</label>
    </listViews>
</CustomObject>